tests/ui/traits/next-solver/unexpected-pointer-deref-issue-154568.stderr
error[E0283]: type annotations needed for `Handshake<_>`
  --> $DIR/unexpected-pointer-deref-issue-154568.rs:13:9
   |
LL |     let handshake = Handshake(callback.0.clone());
   |         ^^^^^^^^^   ----------------------------- type must be known at this point
   |
   = note: the type must implement `Role`
   = note: cannot satisfy `<_ as Role>::Inner == ()`
   = note: cannot satisfy `<_ as Role>::Inner == _`
note: required by a bound in `Handshake`
  --> $DIR/unexpected-pointer-deref-issue-154568.rs:9:21
   |
LL | struct Handshake<R: Role>(R::Inner);
   |                     ^^^^ required by this bound in `Handshake`
help: consider giving `handshake` an explicit type, where the type for type parameter `R` is specified
   |
LL |     let handshake: Handshake<R> = Handshake(callback.0.clone());
   |                  ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
